Modify interface to the custom model

--- a/interface.cfg
+++ b/interface.cfg
@@ -23,52 +23,19 @@
 # digital_out's mentioned above there is a analog_in, it will
 # be connected to %IW0 (analog input buffer position 0)
 
-num_stations = "5"
+num_stations = "1"
 comm_delay = "100"
 
 # ------------
 #   SIMULINK
 # ------------
-simulink.ip = "192.168.171.1"
+simulink.ip = "localhost"
 
 # ------------
 #  STATION 0
 # ------------
-station0.ip = "192.168.171.139"
-station0.add(digital_out) = "10001"
+station0.ip = "localhost"
+station0.add(digital_in) = "10001"
+station0.add(digital_in) = "10002"
 station0.add(digital_out) = "10003"
-station0.add(analog_in) = "10002"
-station0.add(analog_in) = "10004"
-
-# ------------
-#  STATION 1
-# ------------
-station1.ip = "192.168.171.140"
-station1.add(digital_out) = "20001"
-station1.add(digital_out) = "20003"
-station1.add(analog_in) = "20002"
-
-# ------------
-#  STATION 2
-# ------------
-station2.ip = "192.168.171.141"
-station2.add(digital_out) = "30001"
-station2.add(digital_out) = "30003"
-station2.add(analog_in) = "30002"
-
-# ------------
-#  STATION 3
-# ------------
-station3.ip = "192.168.171.142"
-station3.add(digital_out) = "40001"
-station3.add(digital_out) = "40003"
-station3.add(analog_in) = "40002"
-
-# ------------
-#  STATION 4
-# ------------
-station4.ip = "192.168.171.143"
-station4.add(digital_out) = "50001"
-station4.add(digital_out) = "50003"
-station4.add(analog_in) = "50002"
-station4.add(analog_in) = "50004"
+station0.add(digital_out) = "10004"
